# flockmtl

./: .clang-format  .cmake-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  extension_config.cmake  flockmtl_test.db  vcpkg.json
docs/: README.md  (+5 more)
src/: CMakeLists.txt  flockmtl_extension.cpp  large_flock_extension.cpp
src/core/: CMakeLists.txt  module.cpp
src/core/config/: CMakeLists.txt  config.cpp  lf_config.cpp  model.cpp  prompt.cpp  secret.cpp
src/core/functions/: CMakeLists.txt  batch_response_builder.cpp  prompt_builder.cpp
src/core/functions/aggregate/: CMakeLists.txt  llm_agg.cpp  llm_first.cpp  llm_last.cpp  llm_max.cpp  llm_min.cpp  llm_min_or_max.cpp  llm_reduce.cpp  llm_rerank.cpp
src/core/functions/scalar/: CMakeLists.txt  fusion_relative.cpp  get_num_tokens.py  lf_embedding.cpp  lf_filter.cpp  lf_generate.cpp  lf_map.cpp  llm_complete.cpp  llm_complete_json.cpp  llm_embedding.cpp  llm_filter.cpp  llm_map.cpp
src/core/model_manager/: CMakeLists.txt  model_manager.cpp  tiktoken.cpp
src/core/parser/: CMakeLists.txt  lf_query_parser.cpp  lf_tokenizer.cpp  query_parser.cpp  tokenizer.cpp
src/core/parser/llm_response/: CMakeLists.txt  lf_map.cpp  llm_complete_json.cpp  llm_map.cpp
src/core/parser/query/: CMakeLists.txt  lf_model_parser.cpp  lf_prompt_parser.cpp  model_parser.cpp  prompt_parser.cpp  secret_parser.cpp
src/core/parser/scalar/: CMakeLists.txt  fusion_relative.cpp  lf_embedding.cpp  lf_generate.cpp  lf_map.cpp  llm_complete.cpp  llm_complete_json.cpp  llm_embedding.cpp  llm_filter.cpp  llm_map.cpp
src/custom_parser/: CMakeLists.txt  query_parser.cpp  tokenizer.cpp
src/custom_parser/query/: model_parser.cpp  prompt_parser.cpp  secret_parser.cpp
src/functions/: CMakeLists.txt  batch_response_builder.cpp
src/functions/aggregate/: CMakeLists.txt  aggregate.cpp  aggregate_state.cpp  llm_agg.cpp  llm_first.cpp  llm_last.cpp  llm_reduce.cpp  llm_rerank.cpp
src/functions/aggregate/llm_first_or_last/: implementation.cpp  instantiations.cpp  registry.cpp
src/functions/aggregate/llm_reduce/: implementation.cpp  instantiations.cpp  registry.cpp
src/functions/aggregate/llm_rerank/: CMakeLists.txt  implementation.cpp  instantiations.cpp  registry.cpp
src/functions/scalar/: CMakeLists.txt  fusion_relative.cpp  llm_complete.cpp  llm_complete_json.cpp  llm_embedding.cpp  llm_filter.cpp  scalar.cpp
src/functions/scalar/fusion_combanz/: implementation.cpp  registry.cpp
src/functions/scalar/fusion_combmed/: implementation.cpp  registry.cpp
src/functions/scalar/fusion_combmnz/: implementation.cpp  registry.cpp
src/functions/scalar/fusion_combsum/: implementation.cpp  registry.cpp
src/functions/scalar/fusion_relative/: implementation.cpp  registry.cpp
src/functions/scalar/fusion_rrf/: implementation.cpp  registry.cpp
src/functions/scalar/llm_complete/: implementation.cpp  registry.cpp
src/functions/scalar/llm_complete_json/: implementation.cpp  registry.cpp
src/functions/scalar/llm_embedding/: implementation.cpp  registry.cpp
src/functions/scalar/llm_filter/: CMakeLists.txt  implementation.cpp  registry.cpp
src/include/: filesystem.hpp  flockmtl_extension.hpp  large_flock_extension.hpp
src/include/flockmtl/: common.hpp
src/include/flockmtl/core/: common.hpp  config.hpp  module.hpp
src/include/flockmtl/core/config/: config.hpp
src/include/flockmtl/custom_parser/: query_parser.hpp  query_statements.hpp  tokenizer.hpp
src/include/flockmtl/functions/: batch_response_builder.hpp
src/include/flockmtl/model_manager/: model.hpp  repository.hpp  tiktoken.hpp
src/include/flockmtl/prompt_manager/: prompt_manager.hpp  repository.hpp
src/include/flockmtl/registry/: aggregate.hpp  registry.hpp  scalar.hpp
src/include/flockmtl/secret_manager/: secret_manager.hpp
src/include/large_flock/core/: module.hpp
src/include/templates/: lf_filter_prompt_template.hpp  lf_generate_prompt_template.hpp  lf_map_prompt_template.hpp  llm_aggregate_prompt_template.hpp  llm_complete_json_prompt_template.hpp  llm_complete_prompt_template.hpp  llm_filter_prompt_template.hpp  llm_first_or_last_prompt_template.hpp  llm_map_prompt_template.hpp  llm_min_or_max_prompt_template.hpp  llm_prompt_template.hpp  llm_reduce_prompt_template.hpp  llm_rerank_prompt_template.hpp  llm_scalar_prompt_template.hpp
src/model_manager/: CMakeLists.txt  model.cpp  tiktoken.cpp
src/model_manager/providers/adapters/: CMakeLists.txt  azure.cpp  ollama.cpp  openai.cpp
src/prompt_manager/: CMakeLists.txt  prompt_manager.cpp  repository.cpp
src/registry/: CMakeLists.txt  aggregate.cpp  registry.cpp  scalar.cpp
src/secret_manager/: CMakeLists.txt  secret_manager.cpp
src/templates/: CMakeLists.txt  lf_filter_prompt_template.txt  lf_generate_prompt_template.txt  lf_map_prompt_template.txt  llm_aggregate_prompt_template.cpp  llm_prompt_template.cpp  llm_scalar_prompt_template.cpp
src/templates/lf_filter/: lf_filter_prompt_template.txt
src/templates/lf_generate/: lf_generate_prompt_template.txt
src/templates/lf_map/: prompt_template.txt
test/: CMakeLists.txt  README.md  flockmtl_test.db  jobs.csv  test.sql  test_main.cpp
test/custom_parser/: model_parser_test.cpp  prompt_parser_test.cpp  tokenizer_test.cpp
test/functions/scalar/: fusion_combanz_test.cpp  fusion_combmed_test.cpp  fusion_combmnz_test.cpp  fusion_combsum_test.cpp  fusion_rrf_test.cpp  llm_complete_test.cpp
test/functions/scalar/fusion_combanz/: unittest_fusion_combanz.cpp
test/functions/scalar/fusion_combmed/: unittest_fusion_combmed.cpp
test/functions/scalar/fusion_combmnz/: unittest_fusion_combmnz.cpp
test/functions/scalar/fusion_combsum/: unittest_fusion_combsum.cpp
test/functions/scalar/fusion_rrf/: unittest_fusion_rrf.cpp
test/model_manager/: model_manager_test.cpp  model_providers_test.cpp  model_repository_test.cpp  model_statements_test.cpp  prompt_statemenets_test.cpp
test/prompt_manager/: prompt_manager_test.cpp
test/secret_manager/: provider_test.cpp  secret_details_test.cpp  secret_manager_test.cpp  validation_test.cpp
(+172 files in other folders)
